infrastructure/monitoring/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-prometheus-stack-grafana-ingress
  namespace: ingress
spec:
  ingressClassName: traefik
  rules:
    - host: demo.grafana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana 
                port:
                  number: 80
